[package]
name = "rust_os"
version = "0.1.0"
authors = ["Alande Casktura"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.3"
volatile = "0.2.6"

# The profile used for "cargo build".
[profile.dev]
panic = "abort" # Disable stack unwinding on panic.

# The profile used for "cargo build --release".
[profile.release]
panic = "abort" # Disable stack unwinding on panic.
